<resources>
    <string name="app_name">Vincles BCN</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main_fragment_manager">MainFragmentManagerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="reminder_alert_title">Recordatori</string>
    <string name="battery_alert_text">La bateria està al %s</string>
    <string name="network_alert_text">No tens connectivitat amb la xarxa</string>
    <string name="processing">Processant</string>
    <string name="file_too_big">L\'arxiu és massa gran</string>
    <string name="error_audio_format">Aquest àudio no es pot reproduir</string>
    <string name="error_audio_busy">Una altra aplicació està utilitzant el micròfon. No és possible enregistrar el missatge d\'àudio en aquest moment.</string>
    <string name="error_audio_busy_for_video">Una altra aplicació està utilitzant el micròfon. No és possible gravar un vídeo en aquest moment.</string>
    <string name="tracking_home" translatable="false">Inici</string>
    <string name="tracking_contacts" translatable="false">Contactes</string>
    <string name="tracking_add_contact" translatable="false">Afegir contactes</string>
    <string name="tracking_gallery" translatable="false">Fotos i Vídeos</string>
    <string name="tracking_gallery_detail" translatable="false">Fotos i Vídeos: detall</string>
    <string name="tracking_share_contacts_gallery" translatable="false">Fotos i Vídeos: compartir</string>
    <string name="tracking_chat" translatable="false">Chat</string>
    <string name="tracking_group_detail" translatable="false">Grups: detall de grup</string>
    <string name="tracking_notifications" translatable="false">Avisos</string>
    <string name="tracking_call" translatable="false">Vídeo-trucada</string>
    <string name="tracking_calendar" translatable="false">Agenda</string>
    <string name="tracking_calendar_meeting_detail" translatable="false">Detall de cita de l\'agenda</string>
    <string name="tracking_calendar_new_meeting" translatable="false">Crear nova cita de l\'agenda</string>
    <string name="tracking_config" translatable="false">Configuració</string>
    <string name="tracking_config_personal_data" translatable="false">Editar perfil</string>
    <string name="tracking_about" translatable="false">Sobre Vincles BCN</string>
    <string name="tracking_login" translatable="false">Login</string>
    <string name="tracking_register" translatable="false">Nou Registre</string>
    <string name="tracking_terms_conditions" translatable="false">Termes i condicions</string>
    <string name="tracking_terms_splash" translatable="false">Splash screen</string>
    <string name="tracking_validate_user" translatable="false">Validació d\'usuari registrat</string>
    <string name="tracking_recover_password" translatable="false">Recuperació de contrasenya</string>
    <string name="tracking_initial_guide" translatable="false">Tour</string>
    <string name="tracking_campaign_url" translatable="false">https://play.google.com/store/apps/details?id=cat.bcn.vincles.mobile&amp;referrer=%1$s</string>
    <string name="version_control_url_int" translatable="false">https://vincles.i2cat.net:8443/versionControl_android.json</string>
    <string name="version_control_url_pre" translatable="false">https://vc.vincles.i2cat.net:8443/versionControl_android.json</string>
    <string name="version_control_url_pro" translatable="false">http://www.bcn.cat/mobil/apps/controlVersions/vinclesbcn_pro/versionControl_android.json</string>
    <string name="text_explanatory_login">Introdueix les teves credencials per accedir a Vincles BCN:</string>
    <string name="email">Usuari o correu electrònic</string>
    <string name="mail">Correu electrònic</string>
    <string name="password">Contrasenya</string>
    <string name="enter">Entrar</string>
    <string name="register_new_user">Registrar un nou usuari</string>
    <string name="passwordrecovery">Recuperar contrasenya</string>
    <string name="recover_pass_accept">Entesos</string>
    <string name="recover_pass_success">Hem enviat un correu amb instruccions del procés per recuperar la seva contrasenya, si us plau revisa el teu correu electrònic per completar el procés.</string>
    <string name="register_succed">Hem enviat un correu amb les instruccions del procés per finalitzar el registre, si us plau reviseu el vostre correu per finalitzar el procés.</string>
    <string name="login_sending_data">Enviant dades</string>
    <string name="login_loading_user_info">Recuperant informació d\'usuari</string>
    <string name="saving_file">Guardant arxiu</string>
    <string name="saving_credentials">Guardar dades d\'accés</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_alerts">Consulta els avisos</string>
    <string name="welcome_male">Benvingut a Vincles, %s!</string>
    <string name="welcome_female">Benvinguda a Vincles, %s!</string>
    <string name="see_all_album">Fotos i vídeos</string>
    <string name="see_all_contacts">Veure tots els contactes</string>
    <string name="see_all_meetings">Calendari</string>
    <string name="see_all_alerts">Consulta els avisos</string>
    <string name="camera">Càmera</string>
    <string name="no_contacts">Encara no tens contactes</string>
    <string name="no_contacts_group">Encara no tens grups</string>
    <string name="relationship_partner">Parella</string>
    <string name="relationship_child">Fill/a</string>
    <string name="relationship_grandchild">Nét/a</string>
    <string name="relationship_other">Altres</string>
    <string name="relationship_friend">Amic/ga</string>
    <string name="relationship_volunteer">Voluntari/a</string>
    <string name="relationship_caregiver">Cuidador/a</string>
    <string name="view_all_archives">Veure tots els arxius</string>
    <string name="view_all_my_files">Veure només els meus arxius</string>
    <string name="view_received_files">Veure només els arxius rebuts</string>
    <string name="home">Inici</string>
    <string name="contacts">Contactes</string>
    <string name="media">Fotos i vídeos</string>
    <string name="calendar">Calendari</string>
    <string name="alerts">Notificacions</string>
    <string name="configuration">Configuració</string>
    <string name="about_vincles">Sobre Vincles BCN</string>
    <string name="logout">Sortir</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu">@string/empty_string</string>
    <string name="empty_string" translatable="false"></string>
    <string name="menu_string">Menú</string>
    <string name="catalan">Català</string>
    <string name="spanish">Castellà</string>
    <string name="english">Anglès</string>
    <string name="registration_language">* Idioma de l\'app Vincles BCN</string>
    <string name="photography">* Fotografia:</string>
    <string name="pick_a_photo">Tria una foto:</string>
    <string name="take_photo">* La teva foto</string>
    <string name="first_name">* Nom</string>
    <string name="last_name">* Cognoms</string>
    <string name="birthdate">* Data de naixement</string>
    <string name="email_register">* Correu electrònic</string>
    <string name="password_register">* Contrasenya</string>
    <string name="passwordrepeat_register">* Repeteix la contrasenya</string>
    <string name="phone">* Telèfon</string>
    <string name="gender">* Gènere</string>
    <string name="female">Dona</string>
    <string name="male">Home</string>
    <string name="registration_home">* Vius a Barcelona?</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="register">Registrar-me</string>
    <string name="chose_picture">Tria una foto</string>
    <string name="personal_data">Dades personals</string>
    <string name="pick_date">Seleccionar data</string>
    <string name="hint_date">* DD/MM/YYYY</string>
    <string name="change_profile_photo">Canviar foto de perfil</string>
    <string name="gallery">Galeria</string>
    <string name="all_files">Tots els arxius</string>
    <string name="my_files">Els meus arxius</string>
    <string name="received_files">Els arxius rebuts</string>
    <string name="delete">Eliminar</string>
    <string name="share">Compartir</string>
    <string name="before">Anterior</string>
    <string name="next">Següent</string>
    <string name="back">Tornar</string>
    <string name="save_image_in_gallery">Vol guardar la imatge a la galeria de l\'aplicació?</string>
    <string name="save_image_in_gallery_error">Hi ha hagut un error al guardar l\'arxiu. Vol tornar a intentar?</string>
    <string name="error_opening_image">Error a l\'obrir la imatge</string>
    <string name="deleting_file">Esborrant l\'arxiu</string>
    <string name="deleting_files">Esborrant els arxius</string>
    <string name="deleting_files_not_ok_retry">No s\'han pogut esborrar els arxius. Vol tornar a provar?</string>
    <string name="deleting_files_partially_ok">No s\'han pogut esborrar alguns arxius. Vol tornar a provar?</string>
    <string name="gallery_button_share">Compartir</string>
    <string name="gallery_button_share_selection">Compartir la selecció</string>
    <string name="gallery_button_foto">Nova foto</string>
    <string name="gallery_button_video">Nou vídeo</string>
    <string name="gallery_share_title">Selecciona els arxius</string>
    <string name="gallery_no_share">Tornar i no compartir</string>
    <string name="contacts_share_title">Selecciona els contactes</string>
    <string name="gallery_max_items">Pots compartir 10 elements com a màxim</string>
    <string name="gallery_max_contacts">Pots compartir amb 5 contactes com a màxim</string>
    <string name="gallery_filter_share">Compartir</string>
    <string name="gallery_filter_delete">Eliminar</string>
    <string name="gallery_select_all">Seleccionar tot</string>
    <string name="gallery_deselect_all">Deseleccionar tot</string>
    <string name="gallery_no_content">Encara no tens contingut</string>
    <string name="terms_and_conditions">TERMES I CONDICIONS</string>
    <string name="accept">Acceptar</string>
    <string name="cancel">Cancel·lar</string>
    <string name="error">Error</string>
    <string name="alert">Alerta</string>
    <string name="retry">Reintentar</string>
    <string name="config_firstname">Nom</string>
    <string name="config_lastname">Cognoms</string>
    <string name="config_username">Nom d\'usuari</string>
    <string name="config_email">Correu electrònic</string>
    <string name="config_phone">Telèfon</string>
    <string name="config_bcn">Vius a Barcelona?</string>
    <string name="configuration_personal_data">Dades personals</string>
    <string name="configuration_save">Desar</string>
    <string name="configuration_new_password">Nova contrasenya</string>
    <string name="configuration_new_password_verify">Repeteix la contrasenya</string>
    <string name="configuration_old_password">Contrasenya actual</string>
    <string name="calendar_month_monday">DIL</string>
    <string name="calendar_month_tuesday">DIM</string>
    <string name="calendar_month_wednesday">DX</string>
    <string name="calendar_month_thursday">DIJ</string>
    <string name="calendar_month_friday">DIV</string>
    <string name="calendar_month_saturday">DIS</string>
    <string name="calendar_month_sunday">DIU</string>
    <string name="validate_title">Clau de validació</string>
    <string name="validate_code">@string/validate_title</string>
    <string name="validate_button">Validar</string>
    <string name="validate_resend_email">Reenviar correu</string>
    <string name="validate_explanation">Si us plau, introdueix en el següent camp el codi que has rebut per email per a validar el teu usuari.</string>
</resources>