<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:activity="cat.bcn.vincles.mobile.UI.RecoverPassword.RecoverPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/akkurat"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:text="@string/validate_title"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_all_corners_round_gray_clear"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validate_explanation"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"/>

            <!--<EditText
                android:id="@+id/email"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/textview_round_corners_grayclear2_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:textSize="20sp" />-->

            <EditText
                android:id="@+id/code"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/textview_round_corners_grayclear2_background"
                android:hint="@string/validate_code"
                android:inputType="text"
                android:padding="10dip"
                android:textSize="20sp" />

            <Button
                android:id="@+id/validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:background="@drawable/shape_all_corners_round_red"
                android:text="@string/validate_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/send_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/validate_resend_email"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
